--- a/libs/shared/ui/src/lib/components/header/header.module.scss
+++ b/libs/shared/ui/src/lib/components/header/header.module.scss
@@ -1,7 +1,34 @@
-/*
- * Replace this with your own classes
- *
- * e.g.
- * .container {
- * }
-*/
+.container{
+    width: 100%;
+    background-color: #ffffff;
+    .header_container{
+        padding: 1rem 9rem;
+        display: flex;
+        width: auto;
+        justify-content: space-between;
+
+        .login_btn{
+            cursor: pointer;
+            border: 1px solid rgb(163, 163, 235);
+            border-radius: 0.9rem;
+            width: 4rem;
+            height: 2rem;
+            background-color: rgb(250, 247, 244);
+            color: rgb(163, 163, 235);
+            font-size: 16px;
+        }
+    }
+
+    .profile_container{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 4rem;
+        .use_name_and_profile_pic{
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+        }
+    }
+}
