--- a/libs/shared/ui/src/lib/components/menus/menus.module.scss
+++ b/libs/shared/ui/src/lib/components/menus/menus.module.scss
@@ -93,6 +93,7 @@
 
                 .titles{
                     color:rgb(157, 157, 180);
+                    cursor: pointer;
                 }
             }
         }
