--- a/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
@@ -18,6 +18,7 @@
 
         .table_row {
             text-align: left;
+            margin-left: 1rem;
 
             &:nth-child(even) {
                 background-color: #f5f5f5;
