--- a/libs/shared/ui/src/lib/components/updateCategory/update-category.module.scss
+++ b/libs/shared/ui/src/lib/components/updateCategory/update-category.module.scss
@@ -7,7 +7,8 @@
 
     .field_name{
         margin-left: 0.5rem;
-        font-size: 14px;
+        font-size: 15px;
+        font-weight: 500;
     }
 
     .input_fields{
@@ -16,6 +17,8 @@
         padding: 0.5rem;
         border-radius: 10px;
         box-shadow: -1px 3px 5px 0px rgba(204,196,204,1);
+        font-weight: 700;
+        font-size: 17px;
     }
 }
 
