--- a/libs/shared/ui/src/lib/components/menus/menus.module.scss
+++ b/libs/shared/ui/src/lib/components/menus/menus.module.scss
@@ -10,9 +10,10 @@
 .container {
     .menus_container {
         width: 15rem;
+        // width: 17rem;
         height: 100vh;
         border-right: 1px solid rgb(216, 214, 214);
-        padding: 1rem;
+        // padding: 1rem;
         box-shadow: 0 0 20px #0000001a;
 
         .heading_reset_all {
