--- a/libs/shared/ui/src/lib/components/CreateUsers/CreateUsers.module.scss
+++ b/libs/shared/ui/src/lib/components/CreateUsers/CreateUsers.module.scss
@@ -1,3 +1,16 @@
+.create_user_modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    background-color: white;
+    border: 1px solid #fff;
+    border-radius: 1rem;
+    box-shadow: 24px;
+    padding: 1rem;
+    color: black;
+
 .heading {
     font-weight: 700;
     text-decoration: underline;
@@ -71,4 +84,5 @@
             gap: 0.2rem;
         }
     }
+}
 }
