--- a/libs/shared/ui/src/lib/components/DeleteRole/DeleteRole.module.scss
+++ b/libs/shared/ui/src/lib/components/DeleteRole/DeleteRole.module.scss
@@ -1,3 +1,16 @@
+.delete_role_modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    background-color: white;
+    border: 1px solid #fff;
+    border-radius: 1rem;
+    box-shadow: 24px;
+    padding: 1rem;
+    color: black;
+
 .delete_icon{
     width: 100%;
     display: flex;
@@ -59,4 +72,4 @@
         }
     }
 }
-
+}
