--- a/libs/shared/ui/src/lib/components/DeleteUser/DeleteUser.module.scss
+++ b/libs/shared/ui/src/lib/components/DeleteUser/DeleteUser.module.scss
@@ -1,62 +1,78 @@
-.delete_icon{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    transform: translateY(-88%);
-    margin-bottom: -13%;
+.delete_user_modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    background-color: white;
+    border: 1px solid #fff;
+    border-radius: 1rem;
+    box-shadow: 24px;
+    padding: 1rem;
+    color: black;
 
-    .icon{
-        width: 3rem;
-        height: 3rem;
-        border-radius: 50%;
-        background-color: red;
-        color: white;
+    .delete_icon {
+        width: 100%;
         display: flex;
         justify-content: center;
-        align-items: center;
-        color: white;
+        transform: translateY(-88%);
+        margin-bottom: -13%;
+
+        .icon {
+            width: 3rem;
+            height: 3rem;
+            border-radius: 50%;
+            background-color: red;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+        }
     }
-}
 
-.delete_confirmation_container{
-    .heading{
-        text-align: center;
-        font-size: 1.2rem;
-        font-weight: 600;
+    .delete_confirmation_container {
+        .heading {
+            text-align: center;
+            font-size: 1.2rem;
+            font-weight: 600;
 
+        }
+
+        .warning {
+            display: flex;
+            gap: 0.5rem;
+            align-items: center;
+            justify-content: center;
+            margin-top: 1rem;
+
+            .warning_icon {
+                color: red;
+            }
+        }
     }
 
-    .warning{
+    .delete_btn {
         display: flex;
+        justify-content: center;
+        margin-top: 2rem;
         gap: 0.5rem;
-        align-items: center;
-        justify-content: center;
-        margin-top: 1rem;
 
-        .warning_icon{
-            color: red;
+        .cancel_button {
+            background-color: rgb(162, 194, 194);
+
+            &:hover {
+                background-color: rgb(169, 216, 216);
+            }
+        }
+
+        .delete {
+            background-color: red;
+
+            &:hover {
+                background-color: rgb(235, 117, 117);
+            }
         }
     }
+
 }
-
-.delete_btn{
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
-    gap: 0.5rem;
-
-    .cancel_button{
-        background-color: rgb(162, 194, 194);
-        &:hover {
-            background-color: rgb(169, 216, 216);
-        }
-    }
-
-    .delete{
-        background-color: red;
-        &:hover {
-            background-color: rgb(235, 117, 117);
-        }
-    }
-}
-
