--- a/libs/shared/ui/src/lib/components/createCategory/create-category.module.scss
+++ b/libs/shared/ui/src/lib/components/createCategory/create-category.module.scss
@@ -1,51 +1,65 @@
-.heading{
-    font-weight: 700;
-    text-decoration:underline;
-}
-.label_and_inputs{
-    margin-top: 1rem;
+.create_category_modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    background-color: white;
+    border: 1px solid #fff;
+    border-radius: 1rem;
+    box-shadow: 24px;
+    padding: 1rem;
+    color: black;
 
-    .field_name{
-        margin-left: 0.5rem;
-        font-size: 14px;
+    .heading {
+        font-weight: 700;
+        text-decoration: underline;
     }
 
-    .input_fields{
-        width: 100%;
-        border: 1px solid black;
-        padding: 0.5rem;
-        border-radius: 10px;
-        box-shadow: -1px 3px 5px 0px rgba(204,196,204,1);
-    }
-}
+    .label_and_inputs {
+        margin-top: 1rem;
 
-.duration{
-    display: flex;
-    width: 100%;
-    gap: 0.5rem;
+        .field_name {
+            margin-left: 0.5rem;
+            font-size: 14px;
+        }
 
-    .label_and_inputs{
-        flex-basis: 50%;
-    }
-}
-
-.update_btn{
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 1rem;
-    gap: 0.5rem;
-
-    .create_button{
-        background-color: rgb(80, 96, 80);
-    }
-
-    .cancel_button{
-        background-color: red;
-        &:hover {
-            background-color: rgb(235, 117, 117);
+        .input_fields {
+            width: 100%;
+            border: 1px solid black;
+            padding: 0.5rem;
+            border-radius: 10px;
+            box-shadow: -1px 3px 5px 0px rgba(204, 196, 204, 1);
         }
     }
+
+    .duration {
+        display: flex;
+        width: 100%;
+        gap: 0.5rem;
+
+        .label_and_inputs {
+            flex-basis: 50%;
+        }
+    }
+
+    .update_btn {
+        display: flex;
+        justify-content: flex-end;
+        margin-top: 1rem;
+        gap: 0.5rem;
+
+        .create_button {
+            background-color: rgb(80, 96, 80);
+        }
+
+        .cancel_button {
+            background-color: red;
+
+            &:hover {
+                background-color: rgb(235, 117, 117);
+            }
+        }
+    }
+
 }
-
-
-
