--- a/libs/shared/ui/src/lib/components/ManageRoles/ManageRoles.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageRoles/ManageRoles.module.scss
@@ -21,8 +21,14 @@
     .searchButton {
       width: 10%;
       padding: 0.5rem;
-      background-color: skyblue;
+      background-color: green;
       color: white;
+      margin-left: 0.5rem;
+      font-weight: 600;
+
+    }
+    .searchButton:hover{
+        cursor: pointer;
     }
   }
   .searchResultBlock {
@@ -57,6 +63,7 @@
       .icons {
         color: rgb(180, 180, 231);
         cursor: pointer;
+        text-align: center;
       }
     }
 
@@ -70,6 +77,12 @@
     .table_data {
       border-collapse: collapse;
       padding: 0.5rem;
+      border: 1px solid black;
+    }
+    .table_data_icon{
+        border-collapse: collapse;
+        padding: 0.5rem;
+        border: 1px solid black;
     }
   }
 }
