--- a/libs/shared/ui/src/lib/components/ManageUsers/ManageUsers.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageUsers/ManageUsers.module.scss
@@ -20,9 +20,15 @@
     .searchButton {
       width: 10%;
       padding: 0.5rem;
-      background-color: skyblue;
+      background-color: green;
       color: white;
+      margin-left: 0.5rem;
+      font-weight: 600;
     }
+    .searchButton:hover{
+        cursor: pointer;
+    }
+
   }
   .searchResultBlock {
     background-color: white;
@@ -69,6 +75,8 @@
     .table_data {
       border-collapse: collapse;
       padding: 0.5rem;
+      border: 1px solid black;
+
     }
   }
 }
