--- a/libs/shared/ui/src/lib/components/AddRole/AddRole.module.scss
+++ b/libs/shared/ui/src/lib/components/AddRole/AddRole.module.scss
@@ -6,9 +6,9 @@
     width: 500px;
     background-color: white;
     border: 1px solid #fff;
-    border-radius: 4px;
+    border-radius: 1rem;
     box-shadow: 24px;
-    padding: 2;
+    padding: 1rem;
     color: black;
 
     .heading {
