--- a/libs/shared/ui/src/lib/components/ManageUsers/ManageUsers.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageUsers/ManageUsers.module.scss
@@ -3,7 +3,7 @@
   height: 87.5vh;
   background-color: rgb(229 229 229);
 
-  .categories {
+  .users {
     margin-bottom: 1rem;
     display: flex;
     justify-content: space-between;
