--- a/libs/shared/ui/src/lib/components/menus/menus.module.scss
+++ b/libs/shared/ui/src/lib/components/menus/menus.module.scss
@@ -11,7 +11,7 @@
     .menus_container {
         width: 15rem;
         // width: 17rem;
-        height: 100vh;
+        height: 100%;
         border-right: 1px solid rgb(216, 214, 214);
         // padding: 1rem;
         box-shadow: 0 0 20px #0000001a;
