--- a/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
@@ -1,6 +1,6 @@
 .container {
   padding: 2rem 4rem 2rem 2rem;
-  height: 87.5vh;
+  height: 100%;
   background-color: rgb(229 229 229);
 
   .categories {
