validations for category creation and category updation

--- a/libs/shared/ui/src/lib/components/ManageRoles/ManageRoles.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageRoles/ManageRoles.module.scss
@@ -6,7 +6,7 @@
   .categories {
     margin-bottom: 1rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
   }
 
