--- a/libs/shared/ui/src/lib/components/ManageUsers/ManageUsers.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageUsers/ManageUsers.module.scss
@@ -6,7 +6,7 @@
   .users {
     margin-bottom: 1rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
   }
   .searchBlock {
