ui for pagination and filter component added

--- a/apps/goals-on-track/pages/dashboard/manage/categories/index.module.scss
+++ b/apps/goals-on-track/pages/dashboard/manage/categories/index.module.scss
@@ -4,6 +4,8 @@
 
         .header_and_user_detail_section{
             width: 100%;
+            display: flex;
+            flex-direction: row;
         }
     }
 }
