--- a/libs/shared/ui/src/lib/components/header/header.module.scss
+++ b/libs/shared/ui/src/lib/components/header/header.module.scss
@@ -34,16 +34,12 @@
             display: flex;
             gap: 1rem;
             align-items: center;
-            .userName{
+            .userNameHeading{
                 color: white;
-                background-color: green;
             }
             .name{
                 color: white;
             }
-        }
-        .xx{
-            background-color: green;
         }
     }
 }
