--- a/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
@@ -2,6 +2,8 @@
   padding: 2rem 4rem 2rem 2rem;
   height: 100%;
   background-color: rgb(229 229 229);
+  width: 80%;
+
 
   .categories {
     margin-bottom: 1rem;
