--- a/libs/shared/ui/src/lib/components/AddRole/AddRole.module.scss
+++ b/libs/shared/ui/src/lib/components/AddRole/AddRole.module.scss
@@ -31,6 +31,10 @@
             border-radius: 10px;
             box-shadow: -1px 3px 5px 0px rgba(204, 196, 204, 1);
         }
+
+        .error{
+            color: red;
+        }
     }
 
     .duration {
