--- a/libs/shared/ui/src/lib/components/CreateUsers/CreateUsers.module.scss
+++ b/libs/shared/ui/src/lib/components/CreateUsers/CreateUsers.module.scss
@@ -1,4 +1,4 @@
-.create_user_modal{
+.create_user_modal {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -11,87 +11,99 @@
     padding: 1rem;
     color: black;
 
-.heading {
-    font-weight: 700;
-    text-decoration: underline;
-}
+    .heading {
+        font-weight: 700;
+        text-decoration: underline;
+    }
 
-.multiple_inputs {
-    display: flex;
-    gap: 1rem;
-    width: 100%;
+    .multiple_inputs {
+        display: flex;
+        gap: 1rem;
+        width: 100%;
 
-    .label_and_inputs {
+        .label_and_inputs {
+            margin-top: 1rem;
+            flex-basis: 50%;
+
+            .field_name {
+                margin-left: 0.5rem;
+                font-size: 14px;
+            }
+
+            .input_fields {
+                width: 100%;
+                border: 1px solid black;
+                padding: 0.5rem;
+                border-radius: 10px;
+                box-shadow: -1px 3px 5px 0px rgba(204, 196, 204, 1);
+            }
+
+            .error {
+                color: red;
+            }
+
+            .select_dropdown {
+                width: 14rem;
+                height: 2rem;
+                border: 1px solid black;
+                border-radius: 10px;
+                box-shadow: -1px 3px 5px 0px rgba(204, 196, 204, 1);
+            }
+        }
+
+    }
+
+    .duration {
+        display: flex;
+        width: 100%;
+        gap: 0.5rem;
+
+        .label_and_inputs {
+            flex-basis: 50%;
+        }
+    }
+
+    .update_btn {
+        display: flex;
+        justify-content: flex-end;
         margin-top: 1rem;
-        flex-basis: 50%;
+        gap: 0.5rem;
+
+        .create_button {
+            background-color: rgb(80, 96, 80);
+        }
+
+        .cancel_button {
+            background-color: red;
+
+            &:hover {
+                background-color: rgb(235, 117, 117);
+            }
+        }
+    }
+
+    .gender {
+        margin-top: 1rem;
 
         .field_name {
             margin-left: 0.5rem;
             font-size: 14px;
         }
 
-        .input_fields {
-            width: 100%;
-            border: 1px solid black;
-            padding: 0.5rem;
-            border-radius: 10px;
-            box-shadow: -1px 3px 5px 0px rgba(204, 196, 204, 1);
-        }
-
-        .select_dropdown{
-            width: 14rem;
-            height: 2rem; 
-            border: 1px solid black; 
-            border-radius: 10px;
-            box-shadow: -1px 3px 5px 0px rgba(204, 196, 204, 1); 
-        }
-    }
-    
-}
-
-.duration {
-    display: flex;
-    width: 100%;
-    gap: 0.5rem;
-
-    .label_and_inputs {
-        flex-basis: 50%;
-    }
-}
-
-.update_btn {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 1rem;
-    gap: 0.5rem;
-
-    .create_button {
-        background-color: rgb(80, 96, 80);
-    }
-
-    .cancel_button {
-        background-color: red;
-
-        &:hover {
-            background-color: rgb(235, 117, 117);
-        }
-    }
-}
-
-.gender{
-    margin-top: 1rem;
-    .field_name {
-            margin-left: 0.5rem;
-            font-size: 14px;
-        }
-    .gender_selection_section{
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-        .input_and_label{
+        .gender_selection_section {
             display: flex;
-            gap: 0.2rem;
+            align-items: center;
+            gap: 1rem;
+
+            .input_and_label {
+                display: flex;
+                gap: 0.2rem;
+            }
+
+        }
+
+        .error {
+            color: red;
         }
     }
-}
 }
