--- a/libs/shared/ui/src/lib/components/updateCategory/update-category.module.scss
+++ b/libs/shared/ui/src/lib/components/updateCategory/update-category.module.scss
@@ -34,6 +34,10 @@
             font-weight: 700;
             font-size: 17px;
         }
+
+        .error{
+            color: red;
+        }
     }
 
     .duration {
