--- a/libs/shared/ui/src/lib/components/PageNumberContainer/PageNumberContainer.module.scss
+++ b/libs/shared/ui/src/lib/components/PageNumberContainer/PageNumberContainer.module.scss
@@ -1,3 +1,4 @@
+
 .pageNumber_container {
   display: flex;
   justify-content: center;
@@ -5,13 +6,15 @@
   border-radius: 0.5rem;
   margin-top: 1rem;
   box-shadow: 2px 2px 2px gray;
-  .pageNumber {
+
+  .pageNumber{
     padding: 0.3rem;
     margin: 0.2rem;
     border: 1px solid gray;
     border-radius: 0.2rem;
   }
-  .pageNumberSelected{
+  
+  .activePage{
     padding: 0.3rem;
     margin: 0.2rem;
     border: 1px solid skyblue;
@@ -19,10 +22,11 @@
     color: white;
     background-color: skyblue;
   }
-  .pageNumber:hover {
+
+  .pageNumber:hover{
     cursor: pointer;
   }
-  .pageNumberSelected:hover{
+  .activePage:hover{
     cursor: pointer;
   }
 }
