--- a/apps/goals-on-track/component/common/privateLayout/private-layout.module.scss
+++ b/apps/goals-on-track/component/common/privateLayout/private-layout.module.scss
@@ -1,7 +1,9 @@
-/*
- * Replace this with your own classes
- *
- * e.g.
- * .container {
- * }
-*/
+.privateLayout{
+    .privateLayout_left{
+        display: flex;
+        width: 100%;
+    }
+    .privateLayout_right{
+        width: 100%;
+    }
+}
