--- a/libs/shared/ui/src/lib/components/menus/menus.module.scss
+++ b/libs/shared/ui/src/lib/components/menus/menus.module.scss
@@ -6,7 +6,9 @@
 //     }
 // }
 
-
+.selected_menu{
+    background-color: lightblue;
+}
 .container {
     .menus_container {
         width: 15rem;
