--- a/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
@@ -11,14 +11,17 @@
     justify-content: flex-end;
     align-items: center;
   }
+
   .searchBlock {
     margin: 1rem 0rem;
     display: flex;
     flex-direction: row;
+
     .searchInput {
       padding: 0.5rem;
       width: 90%;
     }
+
     .searchButton {
       width: 10%;
       padding: 0.5rem;
@@ -27,45 +30,52 @@
       margin-left: 0.5rem;
       font-weight: 600;
     }
-    .searchButton:hover{
-        cursor: pointer;
+
+    .searchButton:hover {
+      cursor: pointer;
     }
   }
-  .entriesPerPageBlock{
+
+  .entriesPerPageBlock {
     display: flex;
     flex-direction: row;
     align-items: center;
-    .entriesPerPage{
+
+    .entriesPerPage {
       margin: 0.5rem;
       display: flex;
       align-items: center;
     }
-    .entriesPerPageInput{
+
+    .entriesPerPageInput {
       margin: 0.5rem;
       padding: 0.4rem 0.2rem;
     }
-    .entriesButton{
+
+    .entriesButton {
       padding: 0.4rem 0.8rem;
       background-color: skyblue;
       color: white;
       border-radius: 0.4rem;
 
-      &:hover{
+      &:hover {
         cursor: pointer;
       }
     }
   }
+
   .searchResultBlock {
     background-color: white;
     padding: 1rem;
     margin-bottom: 1rem;
 
-    .searchResultCloseButton{
-        background-color: skyblue;
-        color: white;
-        padding: 0.3rem;
+    .searchResultCloseButton {
+      background-color: skyblue;
+      color: white;
+      padding: 0.3rem;
     }
   }
+
   .user_detail_container {
     .table_headings_section {
       background-color: #f5f5f5;
@@ -75,6 +85,7 @@
     .table_row {
       text-align: left;
       margin-left: 1rem;
+
       &:nth-child(even) {
         background-color: #f5f5f5;
       }
@@ -101,31 +112,27 @@
       padding: 0.5rem;
       border: 1px solid black;
     }
-    .headings{
 
-      .heading_contains{
+    .headings {
+
+      .heading_contains {
         display: flex;
         justify-content: space-between;
         align-items: center;
 
-        .northIcon{
+        .northIcon {
           color: rgb(157, 81, 228);
           cursor: pointer;
-          transition: transform 0.3s ease;
         }
 
         .toggle_down {
-          animation-name: toggleDown;
-          animation-delay: 0.25s;
-          animation-duration: 0.75s;
-          animation-fill-mode: forwards;
+          transform: rotate(180deg);
+          transition: transform 0.50s linear;
         }
-    
+
         .toggle_up {
-          animation-name: toggleUp;
-          animation-delay: 0.25s;
-          animation-duration: 0.75s;
-          animation-fill-mode: forwards;
+          transform: rotate(0deg);
+          transition: transform 0.50s linear;
         }
       }
     }
