--- a/libs/shared/ui/src/lib/components/ManageUsers/ManageUsers.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageUsers/ManageUsers.module.scss
@@ -1,15 +1,3 @@
-@keyframes toggleDown {
-  100% {
-    transform: rotate(180deg);
-  }
-}
-
-@keyframes toggleUp {
-  100% {
-    transform: rotate(0deg);
-  }
-}
-
 .container {
   padding: 2rem 4rem 2rem 2rem;
   height: 100%;
@@ -126,21 +114,16 @@
         .northIcon{
           color: rgb(157, 81, 228);
           cursor: pointer;
-          transition: transform 0.3s ease;
         }
 
         .toggle_down {
-          animation-name: toggleDown;
-          animation-delay: 0.25s;
-          animation-duration: 0.75s;
-          animation-fill-mode: forwards;
+          transform: rotate(180deg);
+          transition: transform 0.50s linear;
         }
-    
+
         .toggle_up {
-          animation-name: toggleUp;
-          animation-delay: 0.25s;
-          animation-duration: 0.75s;
-          animation-fill-mode: forwards;
+          transform: rotate(0deg);
+          transition: transform 0.50s linear;
         }
       }
     }
