--- a/libs/shared/ui/src/lib/components/FilterContainer/FilterContainer.module.scss
+++ b/libs/shared/ui/src/lib/components/FilterContainer/FilterContainer.module.scss
@@ -1,7 +1,7 @@
 .filterContainer {
     background-color: rgb(229, 229, 229);
     padding: 1rem;
-    border: 1px solid lightgray;
+    border-right: 1px solid lightgray;
     width: 20%;
 
     .headings {
