--- a/libs/shared/ui/src/lib/components/BreadCrumb/BreadCrumb.module.scss
+++ b/libs/shared/ui/src/lib/components/BreadCrumb/BreadCrumb.module.scss
@@ -1,5 +1,10 @@
 .container{
     background-color: rgb(229, 229, 229);
     width: 100%;
-    padding-left: 1rem;
+    padding: 1rem;
+
+    .pathNames{
+        font-size: 1.2rem;
+    }
+
 }
