--- a/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageCategories/ManageCategories.module.scss
@@ -112,6 +112,7 @@
     .table {
       box-shadow: 1px 1px 13px 0px rgba(206, 204, 204, 0.75);
       width: 100%;
+      table-layout: fixed;
     }
 
     .table,
@@ -123,7 +124,18 @@
     }
 
     .headings {
+      &:nth-child(1){
+        width: 15rem;
+      }
 
+      &:nth-child(3){
+        width: 5rem;
+      }
+
+      &:nth-child(4){
+        width: 5rem;
+      }
+      
       .heading_contains {
         display: flex;
         justify-content: space-between;
