--- a/libs/shared/ui/src/lib/components/ManageRoles/ManageRoles.module.scss
+++ b/libs/shared/ui/src/lib/components/ManageRoles/ManageRoles.module.scss
@@ -102,6 +102,7 @@
     .table {
       box-shadow: 1px 1px 13px 0px rgba(206, 204, 204, 0.75);
       width: 100%;
+      table-layout: fixed;
     }
 
     .table,
@@ -113,7 +114,20 @@
     }
 
     .headings{
+      &:nth-child(1){
+        width: 15rem;
+      }
 
+      &:nth-child(2){
+        width: 9rem;
+      }
+
+      &:nth-child(4){
+        width: 5rem;
+      }
+      &:nth-child(5){
+        width: 5rem;
+      }
       .heading_contains{
         display: flex;
         justify-content: space-between;
