--- a/libs/shared/ui/src/lib/components/header/header.module.scss
+++ b/libs/shared/ui/src/lib/components/header/header.module.scss
@@ -34,6 +34,8 @@
             display: flex;
             gap: 1rem;
             align-items: center;
+            cursor: pointer;
+
             .userNameHeading{
                 color: white;
             }
